Update Spark_Properties.md